# MotionDetector

./: .gitignore  CMakeLists.txt  README.md  output.csv
analysis/: report.txt
include/: frame_buffer.cpp  frame_buffer.hpp  motion_consumer.cpp  motion_consumer.hpp  motion_detector.cpp  motion_detector.hpp  roi_config.hpp  video_capture.cpp  video_capture.hpp
include/core/: motion_consumer.hpp  motion_detector.hpp  video_capture.hpp
include/gui/: frame_image_service.hpp  main_window.hpp  motion_component.hpp
include/models/: detection_result.hpp  mdcfg.hpp  motion_event.hpp
include/queues/: frame_queue.hpp  mdcfg_queue.hpp  mdresult_queue.hpp  thread_queue.hpp
resources/: qml.qrc
resources/qml/: ControlSlider.qml  Main.qml
scripts/: analyze.py  build.sh
src/: main.cpp
src/core/: motion_consumer.cpp  motion_detector.cpp  video_capture.cpp
src/gui/: frame_image_service.cpp  main_window.cpp  motion_component.cpp
src/queues/: frame_queue.cpp
